--- a/homepage/templates/bookContent.html
+++ b/homepage/templates/bookContent.html
@@ -95,8 +95,9 @@
 
     <div class="col-md-12 top_header">
       <div class="hidden-md hidden-lg" style="padding-top:10px;">
-        <a href="#">
-          <div class="user" id="flybtn" ng-click="signin()">
+        <a href="/signin/">
+          <div class="user" id="flybtn">
+            <!-- ng-click="signin()" -->
             <i class="fa fa-user" aria-hidden="true" style="position:fixed;top:13px;right:70px;font-size:30px;color:#eee;cursor:pointer;"></i>
           </div>
         </a>
@@ -113,7 +114,7 @@
         <h2>{{book.title}}</h2>
         <h3>-{{book.author}}</h3>
       </div>
-      <button class="btn btn-primary pull-right sign_btn" ng-click="signin()">sign in</button>
+      <a class="btn btn-primary pull-right sign_btn"  href="/signin/">sign in</a>
     </div>
     <div class="col-md-12 q_main_div">
       <div class="container-fluid q_container" ng-init="initiateMath()">
