--- a/homepage/templates/account.html
+++ b/homepage/templates/account.html
@@ -1,4 +1,4 @@
-{% extends "tutorBase.html" %} {% load staticfiles %}
+{% extends "tutor.angular.apps.html" %} {% load staticfiles %}
 {% block specific_css %}
 <link rel="stylesheet" href="{% static 'css/homepage.css' %}" rel="stylesheet">
 <link rel="stylesheet" href="{% static 'css/angular-ui-switch.min.css' %}" charset="utf-8">
@@ -16,4 +16,5 @@
 <script src="{% static 'js/angular-aside.min.js' %}"></script>
 <script src="{% static 'js/app.tutor.accout.js' %}"></script>
 <script src="{% static 'js/angular-ui-switch.min.js' %}"></script>
+<script src="{% static 'js/ui-bootstrap-tpls-0.14.3.min.js' %}"></script>
 {% endblock %}
