--- a/homepage/templates/bookContent.html
+++ b/homepage/templates/bookContent.html
@@ -41,7 +41,7 @@
         }
       </style> -->
 
-  <div class="col-md-3 pull-right leftSection_div hidden-xs hidden-sm">
+  <div class="col-md-2 pull-right leftSection_div hidden-xs hidden-sm">
     <div class="logoeffect">
       <a href="/"> <img src="/static/images/24tut/white24.png" width="70%"></a>
     </div>
@@ -73,7 +73,7 @@
   </div>
 
 
-  <div class="col-sm-12" id="menu">
+  <!-- <div class="col-sm-12" id="menu">
     <div class="col-sm-6 pull-right menu_list_div hidden-md hidden-lg">
       <div class="logoeffect">
         <a href="/"> <img src="/static/images/24tut/white24.png" width="70%"></a>
@@ -103,7 +103,7 @@
         </ul>
       </div>
     </div>
-  </div>
+  </div> -->
 
   <div class="col-md-9 col-md-offset-3 solution_div" style="background-color:#e8e8e8;">
 
