--- a/homepage/templates/index.html
+++ b/homepage/templates/index.html
@@ -79,12 +79,11 @@
 </div>
 
 <div class="container-fluid no_padding" style="auto;padding-bottom:5rem;">
-  <div class="row" style="margin:0px;">
     <div class="col-md-12 no_padding course_contain_bg">
       <div class="col-md-12 course_contain_gradient">
         <div class="list_div row">
-          <div class="list_container">
-            <div class="list_head col-md-12 min_padd">
+          <div class="list_container container">
+            <div class="list_head col-md-12 col-xs-12 min_padd">
               <span class="heading_medium">Learn any course. NOW!</span>
             </div>
             <div class="accordionWrapper">
@@ -118,16 +117,8 @@
           </div>
         </div>
       </div>
-    </div>
   </div>
 </div>
-
-<!--
-ng-click="drop(0)"
-ng-click="drop(1)"
-ng-click="drop(2)"
-ng-click="drop(3)"
--->
 
 <div class="container-fluid no_padding" style="min-height:50vh;margin:20px auto;">
   <div class="col-md-10 col-md-offset-1">
