--- a/homepage/templates/bookContent.html
+++ b/homepage/templates/bookContent.html
@@ -11,9 +11,16 @@
       var menu = document.getElementById('menu')
        menu.style.display = 'none';
     }
+    var is_menu_open = false;
     function show_menu(){
+      is_menu_open = !is_menu_open;
       var menu = document.getElementById('menu')
-       menu.style.display = 'block';
+      if (is_menu_open) {
+         menu.style.display = 'block';
+      }else {
+         menu.style.display = 'none';
+      }
+
     }
   </script>
 
@@ -73,11 +80,11 @@
   </div>
 
 
-  <!-- <div class="col-sm-12" id="menu">
-    <div class="col-sm-6 pull-right menu_list_div hidden-md hidden-lg">
-      <div class="logoeffect">
+  <div class="col-sm-12" id="menu" style="display:none" >
+    <div class="col-xs-10 pull-right menu_list_div hidden-md hidden-lg" style="margin-top:20vh;">
+      <!-- <div class="logoeffect">
         <a href="/"> <img src="/static/images/24tut/white24.png" width="70%"></a>
-      </div>
+      </div> -->
       <div class="" style="background: rgba(0,0,0,.05);padding: 10px 15px;color: #fff;">
         <h4>OTHER CHAPTERS</h4>
       </div>
@@ -93,9 +100,9 @@
         </ul>
       </div>
     </div>
-    <div class="col-sm-2 menu_q_div hidden-md hidden-lg">
+    <div class="col-xs-2 menu_q_div hidden-md hidden-lg" style="margin-top:20vh;">
       <div class="" style="overflow: hidden;width:99%;">
-        <ul class="list-unstyled q_list" style="height: 97vh;overflow: auto;width: 126%;overflow-x:hidden;">
+        <ul class="list-unstyled q_list" style="height: 97vh;overflow: auto;width: 100%;overflow-x:hidden;">
           {% for q in questions %}
           <li onclick="toQuestion({{ forloop.counter }})"><span class="q_no">Q{{ forloop.counter }}</span>
           </li>
@@ -103,7 +110,7 @@
         </ul>
       </div>
     </div>
-  </div> -->
+  </div>
 
   <div class="col-md-9 col-md-offset-3 solution_div" style="background-color:#e8e8e8;">
 
