--- a/homepage/templates/courses.html
+++ b/homepage/templates/courses.html
@@ -109,6 +109,12 @@
           <div class="tips hidden-xs hidden-sm"></div>
           {% endif %}
         </div>
+        <!-- <div class="col-md-4 clickchange {% if subPart == 'notes' %}  arrow  {% endif %}">
+          <a href="/class-{{level}}-{{title}}/notes/"><b>Forum</b></a>
+          {% if subPart == 'forum' %}
+          <div class="tips hidden-xs hidden-sm"></div>
+          {% endif %}
+        </div> -->
       </div>
     </div>
     {% if not subPart %}
