--- a/homepage/templates/book.html
+++ b/homepage/templates/book.html
@@ -3,7 +3,11 @@
 
 {% block bookcontent %}
 
-<div class="container-fluid"style="padding-top:40px;">
+<style>
+
+</style>
+
+<div class="container-fluid" style="padding-top:40px;">
   <div class="col-md-12">
     <div class="col-md-10">
       <div class="row" style="margin-top:1em;">
@@ -55,7 +59,7 @@
     <div class="col-md-2 min_padd">
       <div class="text-center">
         {% if book.dp %}
-        <img src="{{book.dp.url}}"class="tb_image">
+        <img src="{{book.dp.url}}" class="tb_image">
         {% endif %}
       </div>
     </div>
@@ -79,10 +83,88 @@
       <div class="row text-center" style="font-size:18px;display:inline-block;width:100%;">
         <ul class="list-unstyled chap_list">
           {% for s in sectionobj %}
-          <li><a  href="/{{s.shortUrl}}/"><span>{{s.title}}</span></a></li>
+          <li><a href="/{{s.shortUrl}}/"><span>{{s.title}}</span></a></li>
           {% endfor %}
         </ul>
       </div>
+    </div>
+    <div class="col-md-6" style="min-height:60vh;padding:0px;">
+
+      {% verbatim %}
+      <div class="row text-center" ng-controller="users.forum">
+        <div class="row" ng-repeat="a in forumdata" style="border-top:1px solid #eaecf0;border-bottom:1px solid #eaecf0;padding-bottom: 2em;">
+          <div class="col-md-1 col-xs-2">
+            <div style="width:60px;padding-top: 1.5em;">
+              <img src="/static/images/24tut/hom/dp.jpg" style="width:45px;border-radius:50%;height:45px;" />
+            </div>
+          </div>
+          <div class="col-md-11 col-xs-10 text-left">
+            <div class="no_pad" style="border-bottom: 1px solid #eaecf0;">
+
+              <div class="contentrow" style="flex: 0 1 auto;width:100%;">
+                <div class="toprow" style="">
+                  <span style="font-size:17px;cursor:pointer;color:#3C5899">{{a.user.username}}</span>
+                </div>
+                <div class="bottomrow" style="font-size: 1em;">
+                  <span class="" style="font-size:15px;color: #3C4556;">{{a.txt}}
+                  </span>
+                </div>
+                <div class="bottomrow" style="font-size: 1em;">
+                  <span class="" style="font-size:15px;color: #3C5899;">10 comments
+                  </span>
+                </div>
+              </div>
+            </div>
+            <div class="col-md-1 col-xs-2">
+              <div style="width:60px;padding-top: 1.5em;">
+                <img src="/static/images/24tut/hom/dp.jpg" style="width:45px;border-radius:50%;height:45px;" />
+              </div>
+            </div>
+            <div class="col-md-11 col-xs-10 text-left">
+              <div class="row">
+                <div class="no_pad" style="border-bottom: 1px solid #eaecf0;display: flex;align-items: center;">
+                  <div class="contentrow" style="flex: 0 1 auto;max-width:75%;">
+                    <div class="toprow" style="">
+                      <span style="font-size:17px;cursor:pointer;color:#3C5899">Lara</span>
+                    </div>
+                    <div class="bottomrow" style="font-size: 1em;">
+                      <span class="" style="font-size:15px;color: #3C4556;">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.
+                      </span>
+                    </div>
+                    <div class="bottomrow" style="font-size: 1em;">
+                      <span class="" style="font-size:15px;color:#3C5899;">Posted by April 2018
+                      </span>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="row">
+              <div class="text-center" style="padding-top:2em;margin-left:0.5em;">
+                <div class="col-md-1 col-xs-2 text-center">
+                  <div style="width:60px;padding-top: 1.5em;">
+                    <img src="/static/images/24tut/hom/dp.jpg" style="width:45px;border-radius:50%;height:45px;" />
+                  </div>
+                </div>
+                <div class="col-md-11 col-xs-10  text-left" style="padding-top: 1.5em;">
+                  <textarea class="" type="textarea" placeholder='Add  a comment Here..' ng-model="commentText" style='width:75%;resize: none;'></textarea>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-md-1 col-xs-2 text-center">
+            <div style="width:60px;padding-top: 1.5em;">
+              <img src="/static/images/24tut/hom/dp.jpg" style="width:45px;border-radius:50%;height:45px;" />
+            </div>
+          </div>
+          <div class="col-md-11 col-xs-10  text-left" style="padding-top: 1.5em;">
+            <textarea class="autoExpand areaa" type="textarea" placeholder='Add  a comment Here..' ng-model="parentText" style='width:100%;resize: none;'></textarea>
+          </div>
+        </div>
+      </div>
+      {% endverbatim %}
     </div>
   </div>
 </div>
