--- a/homepage/templates/tutorBook.html
+++ b/homepage/templates/tutorBook.html
@@ -49,6 +49,7 @@
 <script src="{% static 'js/js.cookie.min.js' %}"></script>
 <script src="{% static 'js/app.tutor.common.js' %}"></script>
 <script src="{% static 'js/app.tutor.bookSection.js' %}"></script>
+<script src="{% static 'js/app.tutor.forum.js' %}"></script>
 <script src='https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.2/MathJax.js?config=TeX-MML-AM_CHTML'></script>
 <script type="text/x-mathjax-config">
   MathJax.Hub.Config({ tex2jax: {inlineMath: [['$','$']]} });
