--- a/support/templates/app.feedBack.html
+++ b/support/templates/app.feedBack.html
@@ -53,15 +53,16 @@ label.star:before {
 <body>
   <div class="container-fluid">
     <div class="row" style="padding-top:30px;" >
-      <div class="col-md-10 col-md-offset-1 col-sm-offset-1 col-sm-10 col-xs-12" style="background-color:#f6f7fa;padding-bottom:30px">
+      <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1 col-sm-offset-1 col-sm-10 col-xs-12" style="background-color:#f6f7fa;padding-bottom:30px">
         <div class="row text-center">
           <div class="col-md-12 col-xs-12 col-sm-12">
             <h2> Please provide your feedback below: <h2>
           </div>
         </div>
         <div class="row text-center">
-          <div class="col-md-12 col-xs-12 col-sm-12">
+          <div class="col-md-12 col-xs-12 col-sm-12  text-center">
             <div class="stars">
+              <label> Rate your experience with our service:</label>
               <form id="stars">
                 <input class="star star-5" id="star-5" type="radio" name="star" />
                 <label class="star star-5" for="star-5"></label>
@@ -79,6 +80,7 @@ label.star:before {
         </div>
         <div class="row text-center">
           <div class=" col-md-offset-3 col-md-6 col-sm-offset-1  col-xs-12 col-sm-10">
+            <label> Feel free to add any other comments or suggestions: </label>
             <textarea rows="4" class="form-control" cols="80" placeholder="Feedback" id ="feedbackText"></textarea>
           </div>
         </div>
