--- a/homepage/templates/index.html
+++ b/homepage/templates/index.html
@@ -79,44 +79,46 @@
 </div>
 
 <div class="container-fluid no_padding" style="auto;padding-bottom:5rem;">
-    <div class="col-md-12 no_padding course_contain_bg">
-      <div class="col-md-12 course_contain_gradient">
-        <div class="list_div row">
-          <div class="list_container container">
-            <div class="list_head col-md-12 col-xs-12 min_padd">
-              <span class="heading_medium">Learn any course. NOW!</span>
+  <div class="col-md-12 no_padding course_contain_bg">
+    <div class="col-md-12 course_contain_gradient">
+      <div class="list_div row">
+        <div class="list_container container">
+          <div class="list_head col-md-12 col-xs-12 min_padd">
+            <span class="heading_medium">Learn any course. NOW!</span>
+          </div>
+          <div class="accordionWrapper">
+            <div class="accordionItem open">
+              <h3 class="accordionItemHeading"><span class=""> 01. CBSE Board preperations</span><i class="fa fa-plus"></i></h3>
+              <div class="accordionItemContent">
+                <span> Do you know that the board exams are not the same anymore that it used to be in the past. With most experienced teachers you dont have to worry about syllabus and pattern anymore. Get proven learning strategy from the comfort
+                  of your home </span>
+              </div>
             </div>
-            <div class="accordionWrapper">
-              <div class="accordionItem open">
-                <h3 class="accordionItemHeading"><span class=""> 01. CBSE Board preperations</span><i class="fa fa-plus"></i></h3>
-                <div class="accordionItemContent">
-                  <span> Do you know that the board exams are not the same anymore that it used to be in the past. With most experienced teachers you dont have to worry about syllabus and pattern anymore. Get proven learning strategy from the comfort of your home </span>
-                </div>
-              </div>
 
-              <div class="accordionItem unopen">
-                <h3 class="accordionItemHeading"><span class=""> 02. State Board Preperations</span><i class="fa fa-plus"></i></h3>
-                <div class="accordionItemContent">
-                  <span>Its tough, we know and thats why we do the hardwork in translating difficult concepts into smaller and easy to understand portions.</span>
-                </div>
+            <div class="accordionItem unopen">
+              <h3 class="accordionItemHeading"><span class=""> 02. State Board Preperations</span><i class="fa fa-plus"></i></h3>
+              <div class="accordionItemContent">
+                <span>Its tough, we know and thats why we do the hardwork in translating difficult concepts into smaller and easy to understand portions.</span>
               </div>
+            </div>
 
-              <div class="accordionItem unopen">
-                <h3 class="accordionItemHeading"><span class=""> 03.IIT JEE Mains </span><i class="fa fa-plus"></i></h3>
-                <div class="accordionItemContent">
-                  <span>If you want to join top companies or start your own company then the choice is obvious for an Engineering degree. But dont just be sure but be super sure about your Preparations with 24tutors best in class teaching methods and strategy</span>
-                </div>
+            <div class="accordionItem unopen">
+              <h3 class="accordionItemHeading"><span class=""> 03.IIT JEE Mains </span><i class="fa fa-plus"></i></h3>
+              <div class="accordionItemContent">
+                <span>If you want to join top companies or start your own company then the choice is obvious for an Engineering degree. But dont just be sure but be super sure about your Preparations with 24tutors best in class teaching methods and
+                  strategy</span>
               </div>
-              <div class="accordionItem unopen">
-                <h3 class="accordionItemHeading"><span class=""> 04. IIT JEE Advance </span><i class="fa fa-plus"></i></h3>
-                <div class="accordionItemContent">
-                  <span> You get freedom, fame and trust in you when you graduate from an IIT. Make it to IIT in first attempt with our super simple 1 year course for Free. Yes! its free and it will always be</span>
-                </div>
+            </div>
+            <div class="accordionItem unopen">
+              <h3 class="accordionItemHeading"><span class=""> 04. IIT JEE Advance </span><i class="fa fa-plus"></i></h3>
+              <div class="accordionItemContent">
+                <span> You get freedom, fame and trust in you when you graduate from an IIT. Make it to IIT in first attempt with our super simple 1 year course for Free. Yes! its free and it will always be</span>
               </div>
             </div>
           </div>
         </div>
       </div>
+    </div>
   </div>
 </div>
 
@@ -134,55 +136,67 @@
     </div>
     <div class="col-md-7">
       <div class="row">
-        <div class="col-md-4 text-center">
-          <div ng-click="viewProfile('Ashwini')" class="authors_div showhim">
-            <div class="showme"><img src="/static/images/24tut/profile_overlay.png" width="99%"></div>
-            <div class="ok"><img src="/static/images/ashwini.jpeg" class="round_img" width="70%"></div>
+        <a href="/team/" class="team_a">
+          <div class="col-md-4 text-center">
+            <div class="authors_div showhim">
+              <div class="showme"><img src="/static/images/24tut/profile_overlay.png" width="99%"></div>
+              <div class="ok"><img src="/static/images/ashwini.jpeg" class="round_img" width="70%"></div>
+            </div>
+            <h4> <b>Ashwini</b> </h4>
           </div>
-          <h4> <b>Ashwini</b> </h4>
-        </div>
-        <div class="col-md-4 text-center">
-          <div ng-click="viewProfile('Raj')" class="authors_div showhim">
-            <div class="showme"><img src="/static/images/24tut/profile_overlay.png" width="99%"></div>
-            <div class="ok"><img src="/static/images/raj.jpg" class="round_img" width="70%"></div>
+        </a>
+        <a href="/team/" class="team_a">
+          <div class="col-md-4 text-center">
+            <div class="authors_div showhim">
+              <div class="showme"><img src="/static/images/24tut/profile_overlay.png" width="99%"></div>
+              <div class="ok"><img src="/static/images/raj.jpg" class="round_img" width="70%"></div>
+            </div>
+            <h4> <b>Raj</b> </h4>
           </div>
-          <h4> <b>Raj</b> </h4>
-        </div>
-        <div class="col-md-4 text-center">
-          <div class="authors_div showhim">
-            <div ng-click="viewProfile('Pradeep')" class="showme"><img src="/static/images/24tut/profile_overlay.png" width="99%"></div>
-            <div class="ok"><img src="/static/images/pradeep.png" class="round_img" width="70%"></div>
+        </a>
+        <a href="/team/" class="team_a">
+          <div class="col-md-4 text-center">
+            <div class="authors_div showhim">
+              <div class="showme"><img src="/static/images/24tut/profile_overlay.png" width="99%"></div>
+              <div class="ok"><img src="/static/images/pradeep.png" class="round_img" width="70%"></div>
+            </div>
+            <h4> <b>Pradeep</b> </h4>
           </div>
-          <h4> <b>Pradeep</b> </h4>
-        </div>
       </div>
+      </a>
+
       <div class="row">
-        <div class="col-md-4 text-center">
-          <div ng-click="viewProfile('Atharva')" class="authors_div showhim">
-            <div class="showme"><img src="/static/images/24tut/profile_overlay.png" width="99%"></div>
-            <div class="ok"><img src="/static/images/atharwa.jpg" class="round_img" width="70%"></div>
+        <a href="/team/" class="team_a">
+          <div class="col-md-4 text-center">
+            <div class="authors_div showhim">
+              <div class="showme"><img src="/static/images/24tut/profile_overlay.png" width="99%"></div>
+              <div class="ok"><img src="/static/images/atharwa.jpg" class="round_img" width="70%"></div>
+            </div>
+            <h4> <b> Atharva</b></h4>
           </div>
-          <h4> <b> Atharva</b></h4>
-        </div>
-        <div class="col-md-4 text-center">
-          <div ng-click="viewProfile('Divyam')" class="authors_div showhim">
-            <div class="showme"><img src="/static/images/24tut/profile_overlay.png" width="99%"></div>
-            <div class="ok"><img src="/static/images/divyam.jpg" class="round_img" width="70%"></div>
+        </a>
+        <a href="/team/" class="team_a">
+          <div class="col-md-4 text-center">
+            <div class="authors_div showhim">
+              <div class="showme"><img src="/static/images/24tut/profile_overlay.png" width="99%"></div>
+              <div class="ok"><img src="/static/images/divyam.jpg" class="round_img" width="70%"></div>
+            </div>
+            <h4> <b>Divyam</b> </h4>
           </div>
-          <h4> <b>Divyam</b> </h4>
-        </div>
-        <div class="col-md-4 text-center">
-          <div ng-click="becomeATeacher()" class="authors_div showhim">
-            <div class="showme"><img src="/static/images/24tut/layover.png" width="99%"></div>
-            <div class="ok"><img src="/static/images/24tut/join.png" class="round_img" width="70%"></div>
+        </a>
+        <a href="/career/">
+          <div class="col-md-4 text-center">
+            <div class="authors_div showhim">
+              <div class="showme"><img src="/static/images/24tut/layover.png" width="99%"></div>
+              <div class="ok"><img src="/static/images/24tut/join.png" class="round_img" width="70%"></div>
+            </div>
+            <h4 class="text-muted"> <b> Is this you?</b></h4>
           </div>
-          <h4 class="text-muted"> <b> Is this you?</b></h4>
-        </div>
+        </a>
       </div>
     </div>
   </div>
 </div>
-
 
 <div class="container-fluid no_padding" style="position:relative;">
   <div class="container-fluid no_padding" style="min-height:50vh;background-image:linear-gradient(rgba(27, 27, 27, 0.8),rgba(27, 27, 27, 0.8)),url('/static/images/24tut/tutbg.jpg');background-repeat:no-repeat;background-size:cover;">
@@ -378,7 +392,8 @@
 {% block tutorjs %}
 
 <script type="text/javascript">
-  {% include "app.tutor.common.js" %}
+  { % include "app.tutor.common.js" %
+  }
 </script>
 
 <script type="text/javascript">
