--- a/homepage/templates/index.html
+++ b/homepage/templates/index.html
@@ -392,8 +392,7 @@
 {% block tutorjs %}
 
 <script type="text/javascript">
-  { % include "app.tutor.common.js" %
-  }
+  {% include "app.tutor.common.js" %}
 </script>
 
 <script type="text/javascript">
