--- a/homepage/templates/team.html
+++ b/homepage/templates/team.html
@@ -19,14 +19,6 @@
           Ex-UIPath <br>
           Ex-SumTotal <br>
           Co-Founder, CIOC <br>
-          <ul class="list-inline social-buttons">
-            <!-- <li><a href="#"><i class="fa fa-twitter"></i></a> -->
-            <!-- </li> -->
-            <!-- <li><a href="#"><i class="fa fa-facebook"></i></a> -->
-            <!-- </li> -->
-            <li><a href="https://www.linkedin.com/in/pradeep-yadav-34521044/"><i class="fa fa-linkedin"></i></a>
-            </li>
-          </ul>
         </div>
 
       </div>
@@ -39,12 +31,6 @@
           B.Tech , IIT Bombay - Aerospace Engineering <br>
           M.Tech , IIT Kanpur - Aerospace Engineering <br>
           Co-Founder, CIOC <br>
-          <ul class="list-inline social-buttons">
-            <!-- </li>
-            </li> -->
-            <li><a href="https://www.linkedin.com/in/raj-kumar-yadav-3633145b/"><i class="fa fa-linkedin"></i></a>
-            </li>
-          </ul>
         </div>
 
       </div>
@@ -56,14 +42,6 @@
         <div class="col-md-8 col-md-offset-2">
           B.Tech , IIT Bombay - Aerospace Engineering <br>
           6 Years of teaching experience (Various institutes in Kota, Rajasthan) <br>
-          <ul class="list-inline social-buttons">
-            <!-- <li><a href="#"><i class="fa fa-twitter"></i></a> -->
-            <!-- </li> -->
-            <!-- <li><a href="#"><i class="fa fa-facebook"></i></a> -->
-            <!-- </li> -->
-            <li><a href="https://www.linkedin.com/in/sowmya-narayan-68743a150/"><i class="fa fa-linkedin"></i></a>
-            </li>
-          </ul>
         </div>
       </div>
     </div>
@@ -77,14 +55,6 @@
           B.Tech , IIT Bombay - Chemical Engineering <br>
           M.Tech , IIT Bombay - Chemical Engineering <br>
           PhD , University of Wisconsin , USA <br>
-          <ul class="list-inline social-buttons">
-            <!-- <li><a href="#"><i class="fa fa-twitter"></i></a> -->
-            <!-- </li> -->
-            <!-- <li><a href="#"><i class="fa fa-facebook"></i></a> -->
-            <!-- </li> -->
-            <li><a href="https://www.linkedin.com/in/deepika-kumari-00a45592/"><i class="fa fa-linkedin"></i></a>
-            </li>
-          </ul>
         </div>
 
       </div>
@@ -97,14 +67,6 @@
           B.Tech , IIT Bombay - Aerospace Engineering <br>
           MS , TU Delft, Netherlands <br>
           PhD , TU Berlin, Germany <br>
-          <ul class="list-inline social-buttons">
-            <!-- <li><a href="#"><i class="fa fa-twitter"></i></a> -->
-            <!-- </li> -->
-            <!-- <li><a href="#"><i class="fa fa-facebook"></i></a> -->
-            <!-- </li> -->
-            <li><a href="https://www.linkedin.com/in/pravin-kumar-126bb889/"><i class="fa fa-linkedin"></i></a>
-            </li>
-          </ul>
         </div>
 
       </div>
@@ -120,7 +82,6 @@
 
 {% block tutorjs %}
 <script type="text/javascript">
-  { % include "app.tutor.common.js" %
-  }
+  {% include "app.tutor.common.js" %}
 </script>
 {% endblock %}
